# reVision

./: .clang-format  .gitignore  CMakeLists.txt  Core.sln  Core.vcxproj  Core.vcxproj.filters  Delta.sln  Doxyfile  Doxyfile.in  LICENSE  README.md  code analysis.xlsx  dt_ASSIMP.vcxproj  dt_ASSIMP.vcxproj.filters  dt_FreeImage.vcxproj  dt_FreeImage.vcxproj.filters  reVision_solution_suppressions.cfg
src/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  DoxyDoc.h  Engine.cpp  Engine.h  Engine.h.in  VSCodeAnalysis.ruleset  dt_Engine.cpp  dt_Engine.h  main.cpp  reVision.aps  reVision.rc  resource.h
src/Assets/: Asset.cpp  Asset.h  Asset_Collider.cpp  Asset_Collider.h  Asset_Config.cpp  Asset_Config.h  Asset_Cubemap.cpp  Asset_Cubemap.h  Asset_Image.cpp  Asset_Image.h  Asset_Level.cpp  Asset_Level.h  Asset_Material.cpp  Asset_Material.h  Asset_Mesh.cpp  Asset_Mesh.h  Asset_Model.cpp  Asset_Model.h  Asset_Primitive.cpp  Asset_Primitive.h  Asset_Shader.cpp  Asset_Shader.h  Asset_Shader_Geometry.cpp  Asset_Shader_Geometry.h  Asset_Shader_Pkg.cpp  Asset_Shader_Pkg.h  Asset_Sound.cpp  Asset_Sound.h  Asset_Texture.cpp  Asset_Texture.h  Auto_Model.cpp  Auto_Model.h  Collider.cpp  Collider.h  Config.cpp  Config.h  Cubemap.cpp  Cubemap.h  Image.cpp  Image.h  (+20 more)
src/Core/: CMakeLists.txt  dt_Core.cpp  dt_Core.h  dt_Engine.cpp  dt_Engine.h
src/Core/Assets/: Asset.cpp  Asset.h  Asset_Collider.cpp  Asset_Collider.h  Asset_Config.cpp  Asset_Config.h  Asset_Cubemap.cpp  Asset_Cubemap.h  Asset_Material.cpp  Asset_Material.h  Asset_Model.cpp  Asset_Model.h  Asset_Primitive.cpp  Asset_Primitive.h  Asset_Shader.cpp  Asset_Shader.h  Asset_Shader_Pkg.cpp  Asset_Texture.cpp  Asset_Texture.h
src/Core/Entities/: Entity.cpp  Entity.h  Geometry.h  Light.h  Light_Directional.cpp  Light_Directional.h  Prop.cpp  Prop.h  Sun.h
src/Core/Managers/: Asset_Manager.cpp  Asset_Manager.h  Component_Manager.cpp  Component_Manager.h  Config_Manager.cpp  Config_Manager.h  Geometry_Manager.cpp  Geometry_Manager.h  Input_Manager.cpp  Lighting_Manager.cpp  Lighting_Manager.h  Material_Manager.cpp  Material_Manager.h  Message_Manager.cpp  Message_Manager.h  Shadowmap_Manager.cpp  Shadowmap_Manager.h  Visibility_Manager.cpp  World_Manager.cpp  World_Manager.h
src/Core/Rendering/: Camera.cpp  Camera.h  Test_Scene.cpp  Test_Scene.h  Viewport.cpp  Viewport.h  Visibility_Token.h
src/Core/Systems/: Asset_Manager.cpp  Asset_Manager.h  Config_Manager.cpp  Config_Manager.h  Geometry_Manager.cpp  Geometry_Manager.h  Input_Manager.cpp  Input_Manager.h  Lighting_Manager.cpp  Material_Manager.cpp  Material_Manager.h  Message_Manager.cpp  Message_Manager.h  Shadowmap_Manager.cpp  Shadowmap_Manager.h  System_Interface.h  Visibility.cpp  Visibility.h  Visibility_Manager.cpp  Visibility_Manager.h  World_Manager.cpp  World_Manager.h
src/Core/Utilities/: Action_State.h  Engine_Package.h  FileReader.h  Frustum.h  ImageImporter.cpp  ImageImporter.h  Level.cpp  Level.h  ModelImporter.cpp  ModelImporter.h  Transform.h  VisualFX.cpp  VisualFX.h
src/ECS/: Component_Factory.cpp  Component_Factory.h  ECS.cpp  ECS.h  Entity.h
src/ECS/Components/: BasicPlayer_C.h  BoundingSphere_C.h  Camera_C.h  Collider_C.h  Component.h  Geometry.h  LightDirectional_C.h  LightPoint_C.h  LightSpot_C.h  Light_Directional.cpp  Light_Directional.h  Light_Directional_Cheap.cpp  Light_Directional_Cheap.h  Light_Point.cpp  Light_Point.h  Light_Point_Cheap.cpp  Light_Point_Cheap.h  Light_Spot.cpp  Light_Spot.h  Light_Spot_Cheap.cpp  Light_Spot_Cheap.h  Lighting.h  Model_Animated.cpp  Model_Animated.h  Model_Static.cpp  Model_Static.h  Physics_C.h  Prop_C.h  Reflector.cpp  Reflector.h  Reflector_C.h  Skeleton_C.h  Skybox_C.h  Transform_C.h  ecsComponent.cpp  ecsComponent.h
src/ECS/Resources/: FBO_EnvMap.h  FBO_Geometry.h  FBO_LightBounce.h  FBO_Lighting.h  FBO_Reflection.h  FBO_Shadow_Directional.h  FBO_Shadow_Point.h  FBO_Shadow_Spot.h
src/ECS/Systems/: Collider_Transform_S.h  LightDirectional_S.h  LightPoint_S.h  LightSpot_S.h  LightingDirectional_S.h  LightingPoint_S.h  LightingSpot_S.h  PlayerMovement_S.h  PropBSphere_S.h  PropRendering_S.h  PropShadowing.h  PropShadowing_S.h  Reflector_S.h  SkeletonAnimation_S.h  Skybox_S.h  TransformSync_S.h  ecsSystem.cpp  ecsSystem.h
src/Entities/: Entity.cpp  Entity.h  Geometry.h  Light.h  Prop.h  Sun.h
src/Entities/Components/: Anim_Model_Component.cpp  Anim_Model_Component.h  Component.cpp  Component.h  Geometry_Component.h  Light_Directional_Component.cpp  Light_Directional_Component.h  Light_Point_Component.cpp  Light_Point_Component.h  Light_Spot_Component.cpp  Light_Spot_Component.h  Lighting_Component.h
src/Entities/Players/: Player_Local.h
src/GL/KHR/: khrplatform.h
src/GL/glad/: glad.c  glad.h
src/Managers/: AssetManager.cpp  AssetManager.h  Asset_Manager.cpp  Asset_Manager.h  MaterialManager.cpp  MaterialManager.h  Material_Manager.cpp  Material_Manager.h  MessageManager.cpp  MessageManager.h  Message_Manager.cpp  Message_Manager.h  ModelManager.cpp  ModelManager.h  SoundManager.cpp  SoundManager.h
src/Modules/: Engine_Module.cpp  Engine_Module.h
src/Modules/ECS/: ECS_M.cpp  ECS_M.h  component_types.h  ecsComponent.cpp  ecsComponent.h  ecsEntity.h  ecsHandle.cpp  ecsHandle.h  ecsSystem.cpp  ecsSystem.h  ecsWorld.cpp  ecsWorld.h
src/Modules/Editor/: Editor_M.cpp  Editor_M.h
src/Modules/Game/: Common.h  Common_Definitions.h  Common_Lambdas.h  Game_M.cpp  Game_M.h
src/Modules/Graphics/: Graphics_M.h  (+2 more)
src/States/: EngineState.h  GameSystemInterface.h  MainMenuState.h
src/Systems/: System_Interface.h
src/Utilities/: ActionState.cpp  ActionState.h  EnginePackage.h  Engine_Package.h  Factory_ADT.h  FileReader.cpp  FileReader.h  File_Reader.cpp  File_Reader.h  Frustum.cpp  Frustum.h  GL_MappedBuffer.h  ImageImporter.cpp  ImageImporter.h  Image_Importer.cpp  Image_Importer.h  InputBinding.cpp  InputBinding.h  Intersection.h  MappedChar.h  ModelImporter.cpp  ModelImporter.h  Model_Importer.cpp  Model_Importer.h  PreferenceState.cpp  PreferenceState.h  PriorityList.h  Transform.cpp  Transform.h
(+2648 files in other folders)
